--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,20 +3,20 @@
         <form class="create-update-form" action="/" method="POST">
             <div class="form-group">
                 <label for="ca">Burger Name:</label>
-                <input type="text" id="burgerInput" name="burger_name" placeholder="Add a burger">
-            <button class="btnColor btn btn-success" type="submit">Add burger</button>
+                <input type="text" id="burgerInput" name="burger_name" placeholder="...Order A Burger">
+            <button class="btnColor btn btn-success" type="submit">Add Burger</button>
             </div>
         </form>
     </div>
 
 
     <div class='notDevoured section'>
-        <h2>Not devoured</h2>
+        <h2>Menu</h2>
         <table class ="table">
             <thead>
             <tr>
-                <th class="titleCenter">Not devoured</th>
-                <th class="titleCenter">Devour it</th>
+                <th class="titleCenter">Fresh</th>
+                <th class="titleCenter">EAT!</th>
             </tr>
             </thead>
             <tbody>
@@ -52,7 +52,7 @@
                             {{this.burger_name}}
                             <form action="/{{this.id}}?_method=DELETE" method="POST">
                                 <input type="hidden" name="id" value="{{this.id}}">
-                                <button class="btnColor btn btn-danger" type="submit">Delete</button>
+                                <button class="btnColor btn btn-danger" type="submit">Trash It!</button>
                             </form>
                         </tr>
                         <br><br>
